--- a/Tracer/public/stylesheets/query/css/templatemo-style.css
+++ b/Tracer/public/stylesheets/query/css/templatemo-style.css
@@ -199,7 +199,7 @@ p:last-child {
     position: relative;
     z-index: 100;
     justify-content: center;
-    padding-top: 80px;
+    padding-top: 55px;
 }
 
 .tm-banner-row-header {
@@ -385,6 +385,10 @@ label {
 .form-control:focus {
     border-color: #69c6ba;
     box-shadow: 0 0 0 0.1rem #69c6babf;
+}
+
+.form-row {
+    margin-top: -15px;
 }
 
 #syncBlock,
