--- a/Tracer/public/stylesheets/altToken/css/main.css
+++ b/Tracer/public/stylesheets/altToken/css/main.css
@@ -303,8 +303,12 @@ iframe {
 }
 
 .tm-select {
+  position: absolute;
+  display: block;
+  width: 100%;
   height: 50%;
   top: 20px;
+  left: 0;
 }
 
 /*------------------------------------------------------------------
