--- a/Tracer/public/stylesheets/index/css/templatemo-style.css
+++ b/Tracer/public/stylesheets/index/css/templatemo-style.css
@@ -61,6 +61,20 @@ p {
 	margin: 5px;
 }
 
+.primary-orange-button a {
+	display: inline-block;
+	background-color: #ff9425;
+	font-size: 13px;
+	padding: 12px 18px;
+	color: #fff;
+	font-weight: 500;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	text-decoration: none;
+	border-radius: 20px;
+	margin: 5px;
+}
+
 .header {
     position: fixed;
     top: 0;
