--- a/Tracer/public/stylesheets/query/css/templatemo-style.css
+++ b/Tracer/public/stylesheets/query/css/templatemo-style.css
@@ -267,6 +267,11 @@ label {
     padding: 5px;
 }
 
+.tm-form-group-4 {
+    width: 25%;
+    padding: 5px;
+}
+
 .label-group-2 {
     padding-left: 5px;
 }
